[tool.poetry]
name = "m-19-prod"
version = "0.1.0"
description = ""
authors = ["Максим Маслюк <pb2600mah@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1.6"
django-rest-framework = "^0.1.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.2.0"
pillow = "^10.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
